Basic website ready

--- a/index.html
+++ b/index.html
@@ -1,6 +1,57 @@
-<h1>PoreCamp Australia</h1>
+<html>
 
-<p>
-Coming soon!
+<head>
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+<link rel="stylesheet" href="porecamp.css">
+</head>
+
+<body>
+
+<!-- ---------------------------------------------------------------- -->
+<h1>PoreCamp Australia 2017</h1>
+<p id='blurb'>
+A bootcamp to learn about operating the Oxford Nanopore MinION
 </p>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Details</h2>
+<ul>
+<li>Held in Parkville precinct in Melbourne
+<li>Around Feb/Mar 2017
+<li>Based on the successful <a href="porecamp.github.io">UK PoreCamp</a>
+<li>Limited to &lt; 30 attendees who must be members of the MinION programme
+</ul>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Trainers</h2>
+<ul>
+<li>Ken McGrath (AGRF)
+<li><i>(others TBA)</i>
+</ul>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Committee</h2>
+<ul>
+<li>Ken McGrath, AGRF, Brisbane
+<li>Benjamin Schwessinger, ANU, Canberra
+<li>Kat Holt, UniMelb, Melbourne
+<li>Torsten Seemann, VLSCI, Melbourne
+<li>Martin Smith, Garvan, Sydney
+<li>Lavinia Gordon, AGRF, Melbourne
+<li>Alexis Lucattini, AGRF, Melbourne
+<li>Aaron Darling, UTS, Sydney
+</ul>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Sponsors</h2>
+<p>
+<img src="images/sponsors/nanopore.png" height="100">
+<img src="images/sponsors/agrf.png" height="100">
+<img src="images/sponsors/vccc.png" height="100">
+<img src="images/sponsors/anu.jpg" height="100">
+</p>
+
+</body>
+
+</html>
 
