Initial commit of itinerary, also fixed link for original porecamp and added a link to the itinerary page.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <h2>Details</h2>
 <ul>
 <li>Held in Parkville precinct in Melbourne
-<li>Around Feb/Mar 2017
-<li>Based on the successful <a href="porecamp.github.io">UK PoreCamp</a>
+<li>Wed 8th to Fri 10th Feb 2017
+<li>Based on the successful <a href="https://porecamp.github.io">UK PoreCamp</a>
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
+<li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
