--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 A bootcamp to learn about operating the Oxford Nanopore MinION
 </p>
 
+
 <!-- ---------------------------------------------------------------- -->
 <h2>Details</h2>
 <ul>
@@ -21,13 +22,24 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Based on the successful <a href="https://porecamp.github.io">UK PoreCamp</a>
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
+<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Registration form </a>
+</ul>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Camp Objectives</h2>
+<ul>
+<li>Learn to develop best wet-lab practises for a high-quality MinION library.
+<li>Run your MinION on your own computer.
+<li>Discover suitable data-handling methods for MinION output.
+<li>Discuss latest bioinformatic methods for real-time nanopore data.
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
 <h2>Trainers</h2>
 <ul>
 <li>Ken McGrath (AGRF)
-<li><i>(others TBA)</i>
+<li>Alexis Lucattini (AGRF)
+<li>Lavinia Gordon (AGRF)
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
