added objectives and registration form link.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <!-- ---------------------------------------------------------------- -->
 <h2>Camp Objectives</h2>
 <ul>
-<li>Learn to develop best wet-lab practises for a high-quality MinION library.
-<li>Run your MinION on your own computer.
+<li>Develop best wet-lab practises to produce a high-quality MinION library.
+<li>Hands-on experience, running your MinION on your own computer.
 <li>Discover suitable data-handling methods for MinION output.
 <li>Discuss latest bioinformatic methods for real-time nanopore data.
 </ul>
