--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Ken McGrath (AGRF)
 <li>Alexis Lucattini (AGRF)
 <li>Lavinia Gordon (AGRF)
+<li>Louise Judd (Unimelb)
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
