--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
 <li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Registration form </a>
+<li>Attendance Fee: $900 (Includes flowcell for MinION run)
+<li>Accommodation not provided.
+<li>BYO Minion device and a <a href="https://community.nanoporetech.com/protocols/experiment-companion-minknow/v/mke_1013_v1_revw_11apr2016/computer-compatibility"> compatible laptop</a>
+<li>
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
