--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Attendance Fee: $900 (Includes flowcell for MinION run)
 <li>Accommodation not provided.
 <li>BYO Minion device and a <a href="https://community.nanoporetech.com/protocols/experiment-companion-minknow/v/mke_1013_v1_revw_11apr2016/computer-compatibility"> compatible laptop</a>
-<li>
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
@@ -44,6 +43,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Ken McGrath (AGRF)
 <li>Alexis Lucattini (AGRF)
 <li>Lavinia Gordon (AGRF)
+<li>Louise Judd (UniMelb)
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
