added price list and few extra details.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 A bootcamp to learn about operating the Oxford Nanopore MinION
 </p>
 
+
 <!-- ---------------------------------------------------------------- -->
 <h2>Details</h2>
 <ul>
@@ -21,13 +22,28 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Based on the successful <a href="https://porecamp.github.io">UK PoreCamp</a>
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
+<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Registration form </a>
+<li>Attendance Fee: $900 (Includes flowcell for MinION run)
+<li>Accommodation not provided - <a href="campusmap.html"> recommendations </a>
+<li>BYO Minion device and a <a href="https://community.nanoporetech.com/protocols/experiment-companion-minknow/v/mke_1013_v1_revw_11apr2016/computer-compatibility"> compatible laptop</a>
+</ul>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Camp Objectives</h2>
+<ul>
+<li>Develop best wet-lab practises to produce a high-quality MinION library.
+<li>Hands-on experience, running your MinION on your own computer.
+<li>Discover suitable data-handling methods for MinION output.
+<li>Discuss latest bioinformatic methods for real-time nanopore data.
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
 <h2>Trainers</h2>
 <ul>
 <li>Ken McGrath (AGRF)
-<li><i>(others TBA)</i>
+<li>Alexis Lucattini (AGRF)
+<li>Lavinia Gordon (AGRF)
+<li>Louise Judd (UniMelb)
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
