Added campus map.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Develop best wet-lab practises to produce a high-quality MinION library.
 <li>Hands-on experience, running your MinION on your own computer.
 <li>Discover suitable data-handling methods for MinION output.
-<li>Discuss latest bioinformatic methods for real-time nanopore data.
+<li>Discuss latest bioinformatic methods for analysis of real-time nanopore data.
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
