Added campus map.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
 <li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Application form </a>
-<li>Attendance fee: $900 (includes flowcell \& library kit for MinION run)
+<li>Attendance fee: $900 (includes flowcell & library kit for MinION run)
 <li>BYO MinION device and a <a href="https://community.nanoporetech.com/protocols/experiment-companion-minknow/v/mke_1013_v1_revw_11apr2016/computer-compatibility"> compatible laptop</a>
 <li>Accommodation not provided - <a href="campus.html"> recommendations </a>
 </ul>
