Added Ken's contact details to the front page.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Attendance fee: $900 (includes flowcell & library kit for MinION run)
 <li>BYO MinION device and a <a href="https://community.nanoporetech.com/protocols/experiment-companion-minknow/v/mke_1013_v1_revw_11apr2016/computer-requirements"> compatible laptop</a>
 <li>Accommodation not provided - <a href="campus.html"> recommendations </a>
+<li>For more information please contact Ken.McGrath@agrf.org.au
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
