--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 <!-- ---------------------------------------------------------------- -->
 <h1>PoreCamp Australia 2017</h1>
 <p id='blurb'>
-A bootcamp to learn about operating the Oxford Nanopore MinION
-</p>
+PoreCamp.AU is a training "bootcamp" based around the Oxford Nanopore MinION sequencing platform, <br />
+held in Australia. It represents a unique opportunity to learn about this exciting new sequencing <br />
+platform from some of the leading experts in the field. It is an hands-on workshop run over 3 days, <br />
+covering the technology, library preparation techniques (rapid, 1D and 2D), starting runs, <br />
+bioinformatics analysis and interpretation. <br /> <br />
+
+The series was originally founded by Nick Loman and Joshua Quick (see https://porecamp.github.io/). <br />
+ <br />
+Applications for PoreCamp.AU 2017 is now open! 30 applicants will be selected to receive direct <br />
+training from experienced MinION users from around the world, <br />
+at the University of Melbourne from 8th-10th February 2017 <br /> (immediately prior to the Lorne Genome conference). <br />
+ <br />
+Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23porecampau%22&src=typd" > #porecampau </a> </p>
 
 <!-- ---------------------------------------------------------------- -->
 <h2>Details</h2>
@@ -19,13 +30,9 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Held in Parkville precinct in Melbourne
 <li>Wed 8th to Fri 10th Feb 2017
 <li>Based on the successful <a href="https://porecamp.github.io">UK PoreCamp</a>
+<li><a href="speakers.html"> Speakers</a> include David Eccles (NZ) and Joshua Quick (UK).
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
-<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Application form </a>
-<li>Attendance fee: $900 (includes flowcell & library kit for MinION run and day-time catering)
-<li>BYO MinION device and a <a href="https://community.nanoporetech.com/protocols/experiment-companion-minknow/v/mke_1013_v1_revw_11apr2016/computer-requirements"> compatible laptop</a>
-<li>Accommodation not provided - <a href="campus.html"> recommendations </a>
-<li>For more information please contact <a href="mailto:Ken.McGrath@agrf.org.au"> Ken McGrath </a>
 </ul>
 
 <!-- ---------------------------------------------------------------- -->
@@ -36,6 +43,21 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Discover suitable data-handling methods for MinION output.
 <li>Discuss latest bioinformatic methods for analysis of real-time nanopore data.
 </ul>
+<!-- ---------------------------------------------------------------- -->
+
+
+<h2>How to Apply</h2>
+<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Early-bird Application Form (closes Dec 16th) </a>
+<li>Early-bird applications will be informed if their application is "successful" or "pending" by Dec 18th.
+<li>Final application date is Jan 6th, and applicants will be notified by Jan 13th.
+<li>Attendance fee: $900 (includes flowcell & library kit for MinION run and day-time catering)
+<li>You must BYO MinION device and <a href="https://nanoporetech.com/community/lab-it-requirements"> compatible laptop</a>
+<li>Accommodation not provided - <a href="campus.html"> recommendations </a>
+<li>For more information please contact <a href="mailto:a.siebel@unimelb.edu.au"> Andrew Siebel </a>
+<ul>
+
+</ul>
+
 
 <!-- ---------------------------------------------------------------- -->
 <h2>Trainers</h2>
@@ -45,6 +67,22 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Lavinia Gordon (AGRF)
 <li>Louise Judd (UniMelb)
 </ul>
+
+<!-- ---------------------------------------------------------------- -->
+<h2>Sponsors</h2>
+<p>
+<img src="images/sponsors/nanopore.png" height="100">
+<img src="images/sponsors/agrf.png" height="100">
+<img src="images/sponsors/vccc.png" height="100">
+<img src="images/sponsors/anu.jpg" height="100">
+</br>
+<img src="images/sponsors/CBRIlogo.png" height="80">
+<img src="images/sponsors/genesearch.png" height="80">
+<img src="images/sponsors/protocols_io.png" height="80">
+</p>
+
+</body>
+
 
 <!-- ---------------------------------------------------------------- -->
 <h2>Committee</h2>
@@ -59,16 +97,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Aaron Darling, UTS, Sydney
 </ul>
 
-<!-- ---------------------------------------------------------------- -->
-<h2>Sponsors</h2>
-<p>
-<img src="images/sponsors/nanopore.png" height="100">
-<img src="images/sponsors/agrf.png" height="100">
-<img src="images/sponsors/vccc.png" height="100">
-<img src="images/sponsors/anu.jpg" height="100">
-</p>
 
-</body>
 
 </html>
 
