--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 <li>Held in Parkville precinct in Melbourne
 <li>Wed 8th to Fri 10th Feb 2017
 <li>Based on the successful <a href="https://porecamp.github.io">UK PoreCamp</a>
-<li><a href="speakers.html"> Speakers</a> include David Eccles (NZ) and Joshua Quick (UK).
+<li> <b> <a href="speakers.html"> Speakers</a> include David Eccles (NZ) and Joshua Quick (UK)!</b>
 <li>Limited to &lt; 30 attendees who must be members of the MinION programme
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
 </ul>
