Updated Itinerary to David's standards.

--- a/itinerary.html
+++ b/itinerary.html
@@ -48,8 +48,8 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Metagenomics - WIMP (What's in my pot?).</li>
 <li>Alignment, best tools to align your MinION data.
 <ul>
-<li>Visualising your alignment data.</li>
-<li>Polishing alignments through consensus.</li>
+<li>Visualising your alignment consensus.</li>
+<li>Error correcting MinION reads.</li>
 </ul></li>
 <li><em>De novo</em> assembly - best tools for <em>de novo</em> assembly of long read data.<br></li>
 <li>Scaffolding reads using the MinION, visualise the output.</li>
