Made the speaker section bold

--- a/speakers.html
+++ b/speakers.html
@@ -50,16 +50,19 @@ applications of real-time nanopore sequencing as demonstrated in the publication
 
 <h3 id="de_bio">Biography</h3>
 
-Descibed as a "computer whisperer" by <a href="http://www.malaghan.org.nz/news/bioinformatics/"> TedX </a>,
-David is a freelance bioinformatics research analyist based at the Malaghan Institute. </br>
-David collaborates with many additional international clients including The Max Planck Institute of Molecular Biomedicine, </br>
-and the Queensland University of Technology. The Malaghan Institute has research focuses </br>
-from cancer, asthma and gut health, all of which can be benefit from nanopore sequencing. </br>
+David Eccles is a freelance bioinformatician who has worked (mostly remotely) for a number of different researchers  </br>
+around the world. He is currently working out of an office at the <a href="http://www.malaghan.org.nz/news/miniature-dna-sequencer-on-trial/">Malaghan  </br>
+Institute of Medical Research</a>, where he has been learning about immunology, flow cytometry,   </br>
+and the all the things that can go wrong with the MinION sequencing device.  </br>  </br>
 
-<a href="http://www.malaghan.org.nz/news/bioinformatics/" > Biography source</a> </br>
+David's first placement as a conference speaker was talking about MinION sequencing at the 2015 NGS conference
+in New Zealand, which led to a <a  href="http://www.youtube.com/watch?v=yTgZVVHJMlw">TEDxWellington
+talk</a> in March 2016 where he did sequencing on stage from a tomato source.
 
 <h3 id="de_pub">Publications</h3>
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/26347715" > MinION nanopore sequencing of an influenza genome </a> </br>
+<a href="http://dx.doi.org/10.12688/f1000research.7201.1">MinION Analysis and Reference Consortium: Phase 1 data release and analysis</a> </br>
+
 <!-- ---------------------------------------------------------------- -->
 
 </body>
