Made the speaker section bold

--- a/speakers.html
+++ b/speakers.html
@@ -55,9 +55,9 @@ around the world. He is currently working out of an office at the <a href="http:
 Institute of Medical Research</a>, where he has been learning about immunology, flow cytometry,   </br>
 and the all the things that can go wrong with the MinION sequencing device.  </br>  </br>
 
-David's first placement as a conference speaker was talking about MinION sequencing at the 2015 NGS conference
-in New Zealand, which led to a <a  href="http://www.youtube.com/watch?v=yTgZVVHJMlw">TEDxWellington
-talk</a> in March 2016 where he did sequencing on stage from a tomato source.
+David's first placement as a conference speaker was talking about MinION sequencing at the 2015 NGS conference  </br>
+in New Zealand, which led to a <a  href="http://www.youtube.com/watch?v=yTgZVVHJMlw">TEDxWellington </br>
+talk</a> in March 2016 where he did sequencing on stage from a tomato source. </br>
 
 <h3 id="de_pub">Publications</h3>
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/26347715" > MinION nanopore sequencing of an influenza genome </a> </br>
