--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 
 
 <h2>How to Apply</h2>
-<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Early-bird Application Form (closes Dec 16th) </a>
+<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Early-bird Application Form (closes Dec 16th) </a>.
 <li>Early-bird applications will be informed if their application is "successful" or "pending" by Dec 18th.
 <li>Final application date is Jan 6th, and applicants will be notified by Jan 13th.
-<li>Attendance fee: $900 (includes flowcell & library kit for MinION run and day-time catering)
-<li>You must BYO MinION device and <a href="https://nanoporetech.com/community/lab-it-requirements"> compatible laptop</a>
+<li>Attendance fee: $900 (includes flowcell & library kit for MinION run and day-time catering).
+<li>You must BYO MinION device and <a href="https://nanoporetech.com/community/lab-it-requirements"> compatible laptop</a>.
 <li>Accommodation not provided - <a href="campus.html"> recommendations </a>
-<li>For more information please contact <a href="mailto:a.siebel@unimelb.edu.au"> Andrew Siebel </a>
+<li>For more information please contact <a href="mailto:a.siebel@unimelb.edu.au"> Andrew Siebel </a>.
 <ul>
 
 </ul>
