--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <p id='blurb'>
 PoreCamp.AU is a training "bootcamp" based around the Oxford Nanopore MinION sequencing platform, <br />
 held in Australia. It represents a unique opportunity to learn about this exciting new sequencing <br />
-platform from some of the leading experts in the field. It is an hands-on workshop run over 3 days, <br />
+platform from some of the leading experts in the field. It is a hands-on workshop run over 3 days, <br />
 covering the technology, library preparation techniques (rapid, 1D and 2D), starting runs, <br />
 bioinformatics analysis and interpretation. <br /> <br />
 
-The series was originally founded by Nick Loman and Joshua Quick (see https://porecamp.github.io/). <br />
+The series was originally founded by Nick Loman and Joshua Quick (see <a href="https://porecamp.github.io/"> UK PoreCamp </a>). <br />
  <br />
-Applications for PoreCamp.AU 2017 is now open! 30 applicants will be selected to receive direct <br />
+Applications for PoreCamp.AU 2017 are now open! 30 applicants will be selected to receive direct <br />
 training from experienced MinION users from around the world, <br />
 at the University of Melbourne from 8th-10th February 2017 <br /> (immediately prior to the Lorne Genome conference). <br />
  <br />
@@ -31,7 +31,7 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 <li>Wed 8th to Fri 10th Feb 2017.
 <li>Based on the successful <a href="https://porecamp.github.io">UK PoreCamp</a>.
 <li> <b> <a href="speakers.html"> Speakers</a> include David Eccles (NZ) and Joshua Quick (UK)!</b>
-<li>Limited to &lt; 30 attendees who must be members of the MinION programme.
+<li>Limited to 30 attendees who must be members of the MinION programme.
 <li><a href="itinerary.html"> Itinerary of PoreCampAU </a>
 </ul>
 
