--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ The series was originally founded by Nick Loman and Joshua Quick (see <a href="h
  <br />
 Applications for PoreCamp.AU 2017 are now open! 30 applicants will be selected to receive direct <br />
 training from experienced MinION users from around the world, <br />
-at the University of Melbourne from 8th-10th February 2017 <br /> (immediately prior to the Lorne Genome conference) <br />
+at the University of Melbourne from 8th-10th February 2017 <br /> (immediately prior to the Lorne Genome conference). <br />
  <br />
 Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23porecampau%22&src=typd" > #porecampau </a> </p>
 
