Added NCRIS logo.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 <img src="images/sponsors/CBRIlogo.png" height="80">
 <img src="images/sponsors/genesearch.png" height="80">
 <img src="images/sponsors/protocols_io.png" height="80">
-<img src="images/sponsors/SysGen_blue bg_white text.png" height="80">
+<img src="images/sponsors/SysGen_blue bg_white_text.png" height="80">
+<img src="images/sponsors/NCRIS_Logo_Mono.png" height="80">
 
 </p>
 
