Closed PoreCampAU application.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 
 
 <h2>How to Apply</h2>
-<li><a href="https://goo.gl/forms/tHQUT7JIyoySFVGZ2"> Application Form (closes Jan 6th) </a>.
+<li><a> Registration for PoreCampAU has now closed. </a>.
 <li>Applicants will be notified by Jan 13th.
 <li>Attendance fee: $900 (includes flowcell & library kit for MinION run and day-time catering).
 <li>You must BYO MinION device and <a href="https://nanoporetech.com/community/lab-it-requirements"> compatible laptop</a>.
