Added Alexa to the list of speakers.

--- a/speakers.html
+++ b/speakers.html
@@ -81,6 +81,28 @@ handle the high error rates of the data. </br>
 <a href="http://bioinformatics.oxfordjournals.org/content/32/5/764"> Realtime analysis and visualization of MinION sequencing data with npReader </a>
 
 
+<!-- ---------------------------------------------------------------- -->
+<h2 id="Amc">Alexa McIntyre(NZ)</h2>
+
+<h3 id="Amc_ab">Abstract</h3>
+As the lengths of spaceflights and the distances of their destinations increase, </br>
+portable sequencing will aid in onboard research, environmental sampling, </br>
+and infectious disease diagnosis. In collaboration with NASA, </br>
+we ran the first demonstrations of MinION use during a parabolic flight and on the International Space Station.</br>
+Six onboard experiments generated over 200,000 reads with mean 2D read </br>
+accuracies of 85 to 90% for a three-species library, sufficient to assemble lambda phage and E. coli genomes. </br>
+Using current signals, we also developed methods to detect the most common bacterial base modification, m6A. </br>
+Comparisons to simultaneous terrestrial experiments show that there are no impairments to instrument function </br>
+or the quality of data in space and pave the way for further use. </br>
+
+<h3 id="Amc_bio">Biography</h3>
+
+Alexa is a PhD student in Computational Biology at Weill Cornell Medicine in New York City researching base </br>
+modifications in bacteria and viruses. As part of Christopher Mason’s Lab, </br>
+she has been analyzing data from NASA’s nanopore sequencing tests on the International Space Station. </br>
+She is now working on methods for base modification detection from MinION data. </br>
+
+
 </body>
 
 </html>
