--- a/itinerary.html
+++ b/itinerary.html
@@ -19,6 +19,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 
 <h3 id="day_1">Day 1: Library Preparation and running the MinION.</h3>
 <ol>
+<li> 10am Start: Meet/Greet Introduction. </li>
 <li>How does nanopore sequencing work? - 1D reads vs 2D reads.</li>
 <li>How to purify High-Molecular Weight DNA samples.<br></li>
 <li>Prepare samples for nanopore sequencing:
@@ -69,6 +70,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Understanding the Metrichor output of your runs.</li>
 <li>Comparison of Day 1 sequencing runs.</li>
 <li>Reflections of nanopore sequencing.</li>
+<li>Finish 4pm. </li>
 </ol>
 
 </body>
