Added time and dates.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 <h2>Committee</h2>
 <ul>
 <li>Ken McGrath, AGRF, Brisbane
+<li>Andrew Siebel, UniMelb, Melbourne
 <li>Benjamin Schwessinger, ANU, Canberra
 <li>Kat Holt, UniMelb, Melbourne
 <li>Torsten Seemann, VLSCI, Melbourne
