--- a/itinerary.html
+++ b/itinerary.html
@@ -19,7 +19,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 
 <h3 id="day_1">Day 1: Library Preparation and running the MinION.</h3>
 <ol>
-<li> 10am Start: Meet/Greet Introduction. </li>
+<li> <strong> 10am Start: Meet/Greet Introduction : <a href="campus.html"> Location </a> </strong> </li>
 <li>How does nanopore sequencing work? - 1D reads vs 2D reads.</li>
 <li>How to purify High-Molecular Weight DNA samples.<br></li>
 <li>Prepare samples for nanopore sequencing:
@@ -70,7 +70,7 @@ A bootcamp to learn about operating the Oxford Nanopore MinION
 <li>Understanding the Metrichor output of your runs.</li>
 <li>Comparison of Day 1 sequencing runs.</li>
 <li>Reflections of nanopore sequencing.</li>
-<li>Finish 4pm. </li>
+<li> <strong> Finish 4pm. </strong> </li>
 </ol>
 
 </body>
