Added the quick reference link.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@ at the University of Melbourne from 8th-10th February 2017 <br /> (immediately p
  <br />
 Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23porecampau%22&src=typd" > #porecampau </a> </p>
 
+<!---------------------------------------------------------------------->
+<h2>QUICK REFERENCES</h2>
+<a href="https://goo.gl/maps/W4S6BJwf8sr"> PoreCamp Location: Peter MacCallum Seminar Room, Level 4 West, Medical Building</a>  <br />
+<a href="pdfs/PoreCamp.AU_2017_Schedule.pdf"> Download Schedule</a>  <br />
+<a href="contacts.html"> Contacts</a>  <br />
+
 <!-- ---------------------------------------------------------------- -->
 <h2>Details</h2>
 <ul>
