--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ Follow us on Twitter with <a href="https://twitter.com/search?f=tweets&q=%22%23p
 <a href="https://goo.gl/maps/W4S6BJwf8sr"> PoreCamp Location: Peter MacCallum Seminar Room, Level 4 West, Medical Building</a>  <br />
 <a href="pdfs/PoreCamp.AU_2017_Schedule.pdf"> Download Schedule</a>  <br />
 <a href="contacts.html"> Contacts</a>  <br />
+ 
+ <h2>Bioinformatics Reference</h2>
+ <a href="https://cloudstor.aarnet.edu.au/plus/index.php/s/FRuLpkRGrvflnek/download"> PoreCampAU Training Data </a> <br />
+ <a href="https://www.github.com/alexiswl/PoreCampAU"> Jupyter Repository </a> <br />
+ 
 
 <!-- ---------------------------------------------------------------- -->
 <h2>Details</h2>
